2003-10-29  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* generator/Method.cs: marked Is and Has methods, 
	  to be generated as properties, fixes bug [47910]

2003-10-28  Mike Kestner  <mkestner@ximian.com>

	* configure.in : releasing 0.12

2003-10-28  Mike Kestner  <mkestner@ximian.com>

	* */Makefile.in : create the apidir before installing to it.

2003-10-28  Mike Kestner  <mkestner@ximian.com>

	* generator/BoxedGen.cs : generate GLib.Value ctors. [fixes #47168]
	* generator/Property.cs : use new Boxed value ctors.
	* generator/StructBase.cs : use existing Writer if available.

2003-10-27  Moritz Balz  <verteiler@mbalz.de>

	* gdk/Drawable.custom : add a S.D.Rectangle overload for DrawRect.

2003-10-26  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* gtk/Gtk.metadata: Added the rest of sources/Gtk.metadata 
	  and sorted the metadata.
	* gtk/gtk-api.xml: Regenerated, to reflect the above changes.
	  Tags are swapped around. PaintBox, PaintBoxGap, PaintShadow and
	  PaintShadowGap are moved arround as well.
	* sources/Gtk.metadata: Removed

2003-10-23  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* gtk/Gtk.metadata: Added metadata from sources/Gtk.metadata
	* gtk/gtk-api.xml: Reflects changes of the metadata move, 
	  tags are swapped around.
	* sources/Gtk.metadata: Removed metadata, which are moved to 
	  gtk/Gtk.metadata

2003-10-22  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* gtk/Gtk.metadata: Added metadata from sources/Gtk.metadata
	* gtk/gtk-api.xml: Reflects changes of the metadata move, 
	  tags are swapped around.
	* gtkhtml/Gtk.metadata: Added metadata from sources/Gtk.metadata
	* gtkhtml/gtkhtml-api.xml: Reflects changes of the metadata move, 
	  tags are swapped around.
	* sources/Gtk.metadata: Removed metadata, which are moved to 
	  gtk/Gtk.metadata and gtkhtml/Gtk.metadata

2003-10-22  Mike Kestner  <mkestner@ximian.com>

	* gtkhtml/gtkhtml-api.xml : regenerated
	* sources/makefile : add gtkhtml-embedded.* to the parse. Patch