@@ -5,6 +5,7 @@ DLLWRAP=dllwrap -mno-cygwin -mms-bitfields --target i386-mingw32 --export-all-sy
 
 GLUE_OBJS = \
         adjustment.o            \
+        button.o                \
         clipboard.o             \
         colorseldialog.o        \
         combo.o                 \
