@@ -1,3 +1,10 @@
+2003-10-30  Ken Foster  <kenfoster@tampabay.rr.com>    
+
+	* glue/button.c: initial creating of glue file for GdkButton    
+	* glue/Makefile.am: added button.c to glue make    
+	* glue/makefile.win32: added button.c to win32 glue make    
+	* gtk/Button.custom: expose in_button GdkButton member
+
 2003-10-29  Martin Willemoes Hansen  <mwh@sysrq.dk>
 
 	* generator/Method.cs: marked Is and Has methods, 
